--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /*base*/
 @import "../scss/base/header";
 @import "../scss/base/products";
-@import "../scss/base/products";
+@import "../scss/base/footer";
 
 /*componentes*/
 
