arreglando header y agregando nuevas clases

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /*base*/
-@import "../scss/base/header";
-@import "../scss/base/products";
+@import "../scss/base/cabecera";
 @import "../scss/base/footer";
+@import "../scss/base/products";
 
 /*componentes*/
 
@@ -9,9 +9,3 @@
 @import "../scss/componentes/font";
 @import "../scss/componentes/grid";
 @import "../scss/componentes/medias";
-
-
-
-
-
-
