--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "../scss/base/cabecera";
 @import "../scss/base/footer";
 @import "../scss/base/products";
+@import "../scss/base/producs-camioneta.scss";
 
 /*componentes*/
 
@@ -9,3 +10,5 @@
 @import "../scss/componentes/font";
 @import "../scss/componentes/grid";
 @import "../scss/componentes/medias";
+@import "../scss/componentes/variables.scss"
+
