--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -1,6 +1,7 @@
 /*css footer*/
+
 footer {
-    background-color: red;
+    background-color: $color-primario;
     font-family: Yanone;
     color: white;
     height: 100px;
