--- a/scss/base/_products.scss
+++ b/scss/base/_products.scss
@@ -64,7 +64,7 @@
   }
   
   .portada {
-    background-color: grey;
+    background-color: $color-secundario;
     color: white;
     text-align: center;
     border-top: 1px solid white;
