agregando mix , extend y mapas

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,5 +10,7 @@
 @import "../scss/componentes/font";
 @import "../scss/componentes/grid";
 @import "../scss/componentes/medias";
-@import "../scss/componentes/variables.scss"
-
+@import "../scss/componentes/variables.scss";
+@import "../scss/componentes/extends";
+@import "../scss/componentes/mapas";
+@import "../scss/componentes/mixin";
