--- a/css/style.css
+++ b/css/style.css
@@ -129,16 +129,19 @@ h3 {
 
 .preguntas__h2 {
   text-align: center;
+  font-family: Yanone;
   text-decoration: underline;
   font-size: 40px;
 }
 
 .preguntas h3 {
   font-size: 30px;
+  font-family: Yanone;
 }
 
 .preguntas p {
   font-size: 20px;
+  font-family: Yanone;
 }
 
 /*footer*/
