--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,6 @@ footer {
   font-weight: 400;
   background-color: #6464f8;
   border-radius: 20px;
-  border: black;
   outline: none;
   cursor: pointer;
   font-size: 20px;
@@ -433,7 +432,8 @@ footer {
   margin-top: 50px;
   background-color: grey;
   text-align: center;
-  border-radius: 25px;
+  border-radius: 15px;
+  border: solid black;
 }
 
 .formulario1 input {
@@ -442,20 +442,18 @@ footer {
   margin: auto;
   margin-bottom: 25px;
   margin-top: 20px;
-  border: black;
-  border-bottom: solid black;
   text-align: center;
   justify-content: center;
   outline: none;
   padding: 10px;
   font-size: 15px;
   color: black;
+  border: solid black 1px;
 }
 
 .formulario1 input[type="button"] {
   width: 60%;
   margin: auto;
-  border: solid thin black;
   padding: 15px;
   border-radius: 25px;
   background-color: #6464f8;
